--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
   <properties>
     <forge-project-id>hawtdb</forge-project-id>
     <forge-project-id-uc>HAWTDB</forge-project-id-uc>
+    
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <release-altGitURL>scm:git:ssh://git@forge.fusesource.com/${forge-project-id}.git</release-altGitURL>
   </properties>
 
   <url>http://${forge-project-id}.fusesource.org</url>
@@ -76,15 +79,14 @@
 
   <distributionManagement>
     <repository>
-      <id>release.fusesource.org</id>
-      <name>Release Repository</name>
-      <url>dav:http://fusesource.com/forge/dav/${forge-project-id}/repo/release</url>
+      <id>fusesource-nexus-staging</id>
+      <name>Fusesource Release Repository</name>
+      <url>http://repo.fusesource.com/nexus/service/local/staging/deploy/maven2</url>
     </repository>
     <snapshotRepository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>snapshot.fusesource.org</id>
-      <name>Snapshot Repository</name>
-      <url>dav:http://fusesource.com/forge/dav/${forge-project-id}/repo/snapshot</url>
+      <id>fusesource-nexus-snapshots</id>
+      <name>Fusesource Nexus Snapshots</name>
+      <url>http://repo.fusesource.com/nexus/content/repositories/snapshots</url>
     </snapshotRepository>
     <site>
       <id>website.fusesource.org</id>
@@ -93,30 +95,15 @@
     </site>
   </distributionManagement> 
 
-  <repositories>
-    <repository>
-      <id>fusesource-release</id>
-      <name>Fusesource Open Source Community Release Repository</name>
-      <url>http://${forge-project-id}.fusesource.com/repo/release</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-    </repository>
-    <repository>
-      <id>fusesource-snapshot</id>
-      <name>Fusesource Open Source Community Snapshot Repository</name>
-      <url>http://${forge-project-id}.fusesource.com/repo/snapshot</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </repository>
-  </repositories>
+  <developers>
+    <developer>
+      <id>chirino</id>
+      <name>Hiram Chirino</name>
+      <email>hiram@hiramchirino.com</email>
+      <url>http://hiramchirino.com</url>
+      <timezone>GMT-5</timezone>
+    </developer>
+  </developers>
 
   <build>
     <defaultGoal>install</defaultGoal>
@@ -125,7 +112,7 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-webdav-jackrabbit</artifactId>
-        <version>1.0-beta-5</version>
+        <version>1.0-beta-6</version>
       </extension>
     </extensions>
 
@@ -177,27 +164,16 @@
         </configuration>
       </plugin>
 
-
-      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
+        <version>2.1</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-          <encoding>UTF-8</encoding>
-        </configuration>
-      </plugin>
-        
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-idea-plugin</artifactId>
@@ -221,7 +197,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.0-beta-9</version>
+        <version>2.0</version>
         <configuration>
           <autoVersionSubmodules>true</autoVersionSubmodules>
           <allowTimestampedSnapshots>false</allowTimestampedSnapshots>
@@ -234,15 +210,15 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-scm-plugin</artifactId>
-        <version>1.2</version>
+        <version>1.3</version>
         <dependencies>
           <dependency>
             <groupId>org.apache.maven.scm</groupId>
             <artifactId>maven-scm-provider-gitexe</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
           </dependency>
         </dependencies>
-      </plugin>          
+      </plugin>           
 
     </plugins>
   </build>
@@ -260,7 +236,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.5</version>
+        <version>2.6</version>
         <configuration>
           <excludePackageNames>*.internal</excludePackageNames>
           <linksource>true</linksource>
@@ -309,21 +285,12 @@
     -->
     <profile>
       <id>graph</id>
-      <pluginRepositories>
-        <pluginRepository>
-          <id>mvnplugins.fusesource.org</id>
-          <url>http://mvnplugins.fusesource.org/repo/release</url>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-        </pluginRepository>
-      </pluginRepositories>
       <build>
         <plugins>
           <plugin>
             <groupId>org.fusesource.mvnplugins</groupId>
             <artifactId>maven-graph-plugin</artifactId>
-            <version>1.2</version>
+            <version>1.5</version>
           </plugin>
         </plugins>
       </build>
@@ -337,6 +304,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.0</version>
             <configuration>
               <passphrase>${gpg.passphrase}</passphrase>
             </configuration>
@@ -352,11 +320,12 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
+            <version>2.1.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
                 <goals>
-                  <goal>jar</goal>
+                  <goal>jar-no-fork</goal>
                 </goals>
               </execution>
             </executions>
@@ -365,19 +334,22 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.5</version>
+            <version>2.6</version>
+            
             <configuration>
               <encoding>${project.build.sourceEncoding}</encoding>
             </configuration>
+            
             <executions>
               <execution>
                 <id>attach-javadocs</id>
                 <goals>
-                  <goal>javadoc:aggregate</goal>
+                  <goal>jar</goal>
                 </goals>
               </execution>
             </executions>
           </plugin>
+
         </plugins>
       </build>
     </profile>
