--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <groupId>org.fusesource.hawtdb</groupId>
   <artifactId>hawtdb</artifactId>
   <packaging>bundle</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>HawtDB</name>
   <description>
