- Added a recovery test.. it helped find a recovery problem where recovered shadow pages were not being taken out of the free list, causing a subsquent overwrite of data due to it being allocated to another update.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -19,7 +19,7 @@
 # The logging properties used during tests..
 #
 log4j.rootLogger=WARN, console, file
-log4j.logger.org.apache.activemq=INFO 
+log4j.logger.org.fusesource.hawtdb=INFO 
 
 # Console will only display warnnings
 log4j.appender.console=org.apache.log4j.ConsoleAppender
