--- a/pom.xml
+++ b/pom.xml
@@ -50,23 +50,27 @@
   </organization> 
 
   <issueManagement>
-    <system>jira</system>
-    <url>http://fusesource.com/issues/browse/${forge-project-id-uc}</url>
+    <system>assembla</system>
+    <url>http://www.assembla.com/spaces/hawtdb/support/tickets</url>
   </issueManagement>
   
   <mailingLists>
     <mailingList>
-      <name>${forge-project-id} dev</name>
-      <post>${forge-project-id}-dev@fusesource.org</post>
-      <subscribe>${forge-project-id}-dev-subscribe@fusesource.org</subscribe>
+      <name>Discussion Group</name>
+      <archive>http://groups.google.com/group/hawtdb</archive>
+      <post>hawtdb@googlegroups.com</post>
+      <subscribe>hawtdb+subscribe@googlegroups.com</subscribe>
+      <unsubscribe>hawtdb+unsubscribe@googlegroups.com</unsubscribe>
     </mailingList>
     <mailingList>
-      <name>${forge-project-id} commits</name>
-      <post>${forge-project-id}-commits@fusesource.org</post>
-      <subscribe>${forge-project-id}-commits-subscribe@fusesource.org</subscribe>
+      <name>Source Control and Issue Tracker Notifications</name>
+      <archive>http://groups.google.com/group/hawtdb-commits</archive>
+      <post>hawtdb-commits@googlegroups.com</post>
+      <subscribe>hawtdb-commits+subscribe@googlegroups.com</subscribe>
+      <unsubscribe>hawtdb-commits+unsubscribe@googlegroups.com</unsubscribe>
     </mailingList>
   </mailingLists>
-
+  
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
