--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -33,3 +33,8 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d | %-5p | %m | %c | %t%n
 log4j.appender.file.file=target/test.log
 log4j.appender.file.append=true
+
+#log4j.appender.chainsaw=org.apache.log4j.net.SocketAppender
+#log4j.appender.chainsaw.remoteHost=localhost
+#log4j.appender.chainsaw.port=4445
+#log4j.appender.chainsaw.locationInfo=true
