--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <groupId>org.fusesource.hawtdb</groupId>
   <artifactId>hawtdb-project</artifactId>
   <packaging>pom</packaging>
-  <version>1.6-SNAPSHOT</version>
+  <version>1.6</version>
 
   <name>HawtDB</name>
   <description>
