--- a/hawtdb/pom.xml
+++ b/hawtdb/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.fusesource.hawtdb</groupId>
     <artifactId>hawtdb-project</artifactId>
-    <version>1.6</version>
+    <version>1.7-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -28,7 +28,7 @@
   <groupId>org.fusesource.hawtdb</groupId>
   <artifactId>hawtdb</artifactId>
   <packaging>bundle</packaging>
-  <version>1.6</version>
+  <version>1.7-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
